// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VColorPickerEdit.ts should change mode 1`] = `
<div class="v-color-picker__edit">
  <div class="v-color-picker__input">
    <input type="number"
           min="0"
           max="255"
           step="1"
           value="0"
    >
    <span>
      R
    </span>
  </div>
  <div class="v-color-picker__input">
    <input type="number"
           min="0"
           max="255"
           step="1"
           value="0"
    >
    <span>
      G
    </span>
  </div>
  <div class="v-color-picker__input">
    <input type="number"
           min="0"
           max="255"
           step="1"
           value="0"
    >
    <span>
      B
    </span>
  </div>
  <div class="v-color-picker__input">
    <input type="number"
           min="0"
           max="1"
           step="0.01"
           value="0"
    >
    <span>
      A
    </span>
  </div>
  <button class="v-btn v-btn--icon v-btn--round theme--light v-size--small"
          type="button"
  >
    <span class="v-btn__content">
      <i class="v-icon notranslate theme--light material-icons"
         aria-hidden="true"
      >
        $unfold
      </i>
    </span>
  </button>
</div>
`;

exports[`VColorPickerEdit.ts should change mode 2`] = `
<div class="v-color-picker__edit">
  <div class="v-color-picker__input">
    <input type="number"
           min="0"
           max="360"
           step="1"
           value="0"
    >
    <span>
      H
    </span>
  </div>
  <div class="v-color-picker__input">
    <input type="number"
           min="0"
           max="1"
           step="0.01"
           value="0"
    >
    <span>
      S
    </span>
  </div>
  <div class="v-color-picker__input">
    <input type="number"
           min="0"
           max="1"
           step="0.01"
           value="0"
    >
    <span>
      L
    </span>
  </div>
  <div class="v-color-picker__input">
    <input type="number"
           min="0"
           max="1"
           step="0.01"
           value="0"
    >
    <span>
      A
    </span>
  </div>
  <button class="v-btn v-btn--icon v-btn--round theme--light v-size--small"
          type="button"
  >
    <span class="v-btn__content">
      <i class="v-icon notranslate theme--light material-icons"
         aria-hidden="true"
      >
        $unfold
      </i>
    </span>
  </button>
</div>
`;

exports[`VColorPickerEdit.ts should change mode 3`] = `
<div class="v-color-picker__edit">
  <div class="v-color-picker__input">
    <input maxlength="9"
           value="#00000000"
    >
    <span>
      HEX
    </span>
  </div>
  <button class="v-btn v-btn--icon v-btn--round theme--light v-size--small"
          type="button"
  >
    <span class="v-btn__content">
      <i class="v-icon notranslate theme--light material-icons"
         aria-hidden="true"
      >
        $unfold
      </i>
    </span>
  </button>
</div>
`;

exports[`VColorPickerEdit.ts should change mode 4`] = `
<div class="v-color-picker__edit">
  <div class="v-color-picker__input">
    <input type="number"
           min="0"
           max="360"
           step="1"
           value="0"
    >
    <span>
      H
    </span>
  </div>
  <div class="v-color-picker__input">
    <input type="number"
           min="0"
           max="1"
           step="0.01"
           value="0"
    >
    <span>
      S
    </span>
  </div>
  <div class="v-color-picker__input">
    <input type="number"
           min="0"
           max="1"
           step="0.01"
           value="0"
    >
    <span>
      L
    </span>
  </div>
  <div class="v-color-picker__input">
    <input type="number"
           min="0"
           max="1"
           step="0.01"
           value="0"
    >
    <span>
      A
    </span>
  </div>
  <button class="v-btn v-btn--icon v-btn--round theme--light v-size--small"
          type="button"
  >
    <span class="v-btn__content">
      <i class="v-icon notranslate theme--light material-icons"
         aria-hidden="true"
      >
        $unfold
      </i>
    </span>
  </button>
</div>
`;

exports[`VColorPickerEdit.ts should hide mode switch button 1`] = `
<div class="v-color-picker__edit">
  <div class="v-color-picker__input">
    <input type="number"
           min="0"
           max="255"
           step="1"
           value="0"
    >
    <span>
      R
    </span>
  </div>
  <div class="v-color-picker__input">
    <input type="number"
           min="0"
           max="255"
           step="1"
           value="0"
    >
    <span>
      G
    </span>
  </div>
  <div class="v-color-picker__input">
    <input type="number"
           min="0"
           max="255"
           step="1"
           value="0"
    >
    <span>
      B
    </span>
  </div>
  <div class="v-color-picker__input">
    <input type="number"
           min="0"
           max="1"
           step="0.01"
           value="0"
    >
    <span>
      A
    </span>
  </div>
</div>
`;

exports[`VColorPickerEdit.ts should render with disabled 1`] = `
<div class="v-color-picker__edit">
  <div class="v-color-picker__input">
    <input type="number"
           min="0"
           max="255"
           step="1"
           disabled
           value="0"
    >
    <span>
      R
    </span>
  </div>
  <div class="v-color-picker__input">
    <input type="number"
           min="0"
           max="255"
           step="1"
           disabled
           value="0"
    >
    <span>
      G
    </span>
  </div>
  <div class="v-color-picker__input">
    <input type="number"
           min="0"
           max="255"
           step="1"
           disabled
           value="0"
    >
    <span>
      B
    </span>
  </div>
  <div class="v-color-picker__input">
    <input type="number"
           min="0"
           max="1"
           step="0.01"
           disabled
           value="0"
    >
    <span>
      A
    </span>
  </div>
  <button class="v-btn v-btn--disabled v-btn--icon v-btn--round theme--light v-size--small"
          type="button"
          disabled
  >
    <span class="v-btn__content">
      <i class="v-icon notranslate theme--light material-icons"
         aria-hidden="true"
      >
        $unfold
      </i>
    </span>
  </button>
</div>
`;
